// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match the snapshot 1`] = `
<header
  className="header"
>
  <Link
    replace={false}
    to="/"
  >
    <h1
      className="header__header"
    >
      Robo Report
    </h1>
  </Link>
  <nav
    className="header__nav"
  >
    <Link
      className="header__link header__link--home"
      replace={false}
      to="/"
    >
      HOME
    </Link>
    <NavLink
      activeClassName="active"
      ariaCurrent="true"
      className="header__link hidden"
      to="/myReports"
    >
      MY REPORTS
    </NavLink>
    <button
      className="header__link header__link--sign-in-btn"
      onClick={[Function]}
    >
      SIGN IN
    </button>
  </nav>
</header>
`;

exports[`Header should match the snapshot 2`] = `
<header
  className="header"
>
  <Link
    replace={false}
    to="/"
  >
    <h1
      className="header__header"
    >
      Robo Report
    </h1>
  </Link>
  <nav
    className="header__nav"
  >
    <Link
      className="header__link header__link--home"
      replace={false}
      to="/"
    >
      HOME
    </Link>
    <NavLink
      activeClassName="active"
      ariaCurrent="true"
      className="header__link header__link--reports-button"
      to="/myReports"
    >
      MY REPORTS
    </NavLink>
    <button
      className="header__link header__link--sign-in-btn"
      onClick={[Function]}
    >
      SIGN OUT
    </button>
  </nav>
</header>
`;
